[gd_scene load_steps=5 format=3 uid="uid://bergbvik7k3ry"]

[ext_resource type="PackedScene" uid="uid://c8s373bamiwuj" path="res://rythm_game/note_drawers/NoteGraphic.tscn" id="1"]
[ext_resource type="Script" path="res://rythm_game/note_drawers/new/RushNoteDrawer.gd" id="1_heks4"]
[ext_resource type="PackedScene" uid="uid://1b0dhe4p36pa" path="res://rythm_game/note_drawers/NoteTargetNew.tscn" id="2"]
[ext_resource type="Script" path="res://rythm_game/note_drawers/new/rush_particle_drawer.gd" id="4_0fom8"]

[node name="SingleNoteDrawer" type="Node2D"]
script = ExtResource("1_heks4")

[node name="ProgressLabel" type="Node2D" parent="."]

[node name="NoteTarget" parent="." instance=ExtResource("2")]
z_index = -1
z_as_relative = false

[node name="Note" parent="." instance=ExtResource("1")]

[node name="RushNoteGraphic" parent="." instance=ExtResource("1")]
unique_name_in_owner = true

[node name="RushNoteTimingArm" type="Sprite2D" parent="RushNoteGraphic"]
unique_name_in_owner = true
offset = Vector2(0, -62)

[node name="ScoreBonus" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ScoreBonusLabel" type="Label" parent="ScoreBonus"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 64)
offset_right = 9.0
offset_bottom = 52.0
text = "+1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RushText" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="RushTextSprite" type="Sprite2D" parent="RushText"]
unique_name_in_owner = true
position = Vector2(0, 100)
scale = Vector2(0.5, 0.5)

[node name="RushParticleDrawer" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_0fom8")
